# sysopy

cw01/zad1/: CMakeLists.txt
cw01/zad2/: CMakeLists.txt  app.h  raport2.txt
cw01/zad2/libs/: my_lib.h
cw01/zad3a/: Makefile  app.c  app.h  app_dll.h  my_lib.c  results3a.txt
cw01/zad3b/: Makefile  app_dll.c  results3b.txt
cw02/zad1/: main.c  main.h  test_script.sh  wyniki.txt
cw02/zad2/: CMakeLists.txt  main.c  main.h
cw03/zad1/: CMakeLists.txt  main.c  main.h
cw03/zad2/: CMakeLists.txt  main.c  main.h  wsadfile
cw03/zad3/: CMakeLists.txt  killer1.c  killer2.c  main.c  main.h  wsadfile
cw04/zad1/: CMakeLists.txt  main.c  main.h
cw04/zad2/: CMakeLists.txt  child.c  child.h  main.c  main.h
cw04/zad3/: CMakeLists.txt  child.c  child.h  main.c  main.h
cw05/zad1/: CMakeLists.txt  main.c  main.h  wsadfile
cw05/zad2/: CMakeLists.txt  master.c  master.h  slave.c  slave.h
cw06/zad1/: CMakeLists.txt  client.c  client.h  consts.h  server.c  server.h
cw06/zad2/: CMakeLists.txt  client.c  client.h  consts.h  server.c  server.h
cw07/zad1/: CMakeLists.txt  barber.c  barber.h  client.c  client.h  commons.c  commons.h  queue.c  queue.h  semaphores.c  semaphores.h
cw07/zad2/: CMakeLists.txt  barber.c  barber.h  client.c  client.h  commons.h  queue.c
cw08/zad1/: CMakeLists.txt  Times.txt  def.txt  main.c  main.h  test_script.sh
cw09/zad1/: CMakeLists.txt  PanTadeusz.txt  consumer.c  consumer.h  main.c  main.h  producer.c  producer.h
cw09/zad2/: CMakeLists.txt  consumer.c  consumer.h  main.c  main.h  producer.c  producer.h
cw10/zad1/: client.c  client.h  server.c  server.h
cw10/zad2/: CMakeLists.txt  client.c  client.h  server.c  server.h
